# rag-demo

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
docs/: DETAILED_GUIDE.md  PROJECT_PLAN.md  T2_MILVUS_BENCHMARK_RESULTS.md  codebase-rag-mcp-cli-projects.md  local-first-codebase-rag-comparison.md  sample_embedding_eval.jsonl  sample_rfc.md
ebooks/beyond-vibe-coding-cn/: chapter-01-introduction-what-is-vibe-coding.md  chapter-02-art-of-the-prompt.md  chapter-03-the-70-percent-problem.md  chapter-04-beyond-the-70-percent.md  chapter-05-understanding-generated-code.md  chapter-06-ai-driven-prototyping.md  chapter-07-building-web-applications.md  chapter-08-security-maintainability-reliability.md  chapter-09-ethical-implications.md  chapter-10-autonomous-background-coding-agents.md  chapter-11-future-of-ai-augmented-development.md  part-01-foundations.md  part-02-ai-coding-in-practice.md  preface.md
ebooks/building-data-driven-applications/: 01-preface.md  02-part1-introduction.md  03-chapter01-understanding-llms.md  04-chapter02-llamaindex-introduction.md  05-part2-introduction.md  06-chapter03-kickstarting-journey.md  07-chapter04-ingesting-data.md  08-chapter05-indexing.md  (+8 more)
observability/: README.md  observe_vector_db.sh
tests/: test_chunking_recall.py  test_documents.py  test_embedding_selection.py  test_milvus_bench.py  test_qdrant_weaviate.py  test_rag_metadata.py
tutorial/: 01_rag-basics-vector-database.md  02_llm-api-and-rag.md  03_markdown-to-rag-index.md  04_chunking-basics.md  05_retrieval-evaluation-recall.md  README.md
(+23 files in other folders)
